# Vertex

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package-lock.json  package.json  test-pool.json
.github/workflows/: ci.yml
apps/ui/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
apps/ui-temp/: creator.json  package-lock.json  package.json  tailwind.config.js  treasury.json
apps/ui-temp/app/: config.ts  environment.tsx  globals.css
apps/ui-temp/app/honorary-position/: page.tsx
apps/ui-temp/app/lib/: provider.ts  signAndSendTransaction.ts
apps/ui-temp/app/policy-setup/: page.tsx
apps/ui/.next/: prerender-manifest.js  routes-manifest.json  trace
apps/ui/.next/cache/webpack/server-production/: index.pack
apps/ui/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/ui/.next/server/app/: _not-found.js  page.js
apps/ui/.next/server/app/daily-crank/: page.js
apps/ui/.next/server/app/honorary-position/: page.js
apps/ui/.next/server/app/policy-setup/: page.js  page.js.nft.json
apps/ui/.next/server/chunks/: 22.js  959.js
apps/ui/.next/types/app/: layout.ts  page.ts
apps/ui/.next/types/app/daily-crank/: page.ts
apps/ui/.next/types/app/honorary-position/: page.ts
apps/ui/.next/types/app/policy-setup/: page.ts
apps/ui/app/: config.ts  environment.tsx  idl.ts  layout.tsx  page.tsx
apps/ui/app/daily-crank/: page.tsx
apps/ui/app/honorary-position/: page.tsx
apps/ui/app/lib/: provider.ts
apps/ui/app/policy-setup/: page.tsx
audits/: checklist.md
cli/: package.json
docs/: cli.md  security.md
docs/operations/: deployments.md
docs/programs/: vesting.md
programs/common/src/: authority.rs  bpf_sort.rs  lib.rs
programs/fee_router/: Cargo.toml
programs/fee_router/src/: lib.rs  meteora_cpi.rs
programs/launchpad/src/: lib.rs  state.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
programs/vesting/: Cargo.toml
programs/vesting/src/: lib.rs
reda-37/Vertex/: .gitignore  Anchor.toml  Cargo.toml  LICENSE  Makefile  mkdocs.yml  package-lock.json  package.json  safe_git_repair.sh
reda-37/Vertex/app-demo/web/: .env.example  package.json  tsconfig.json
reda-37/Vertex/app-demo/web/app/: page.tsx
reda-37/Vertex/apps/ui/: .env.example  next.config.js  package.json
reda-37/Vertex/apps/ui/app/: layout.tsx
reda-37/Vertex/apps/ui/app/daily-crank/: page.tsx
reda-37/Vertex/apps/ui/app/lib/: provider.ts
reda-37/Vertex/apps/ui/app/policy-setup/: page.tsx
reda-37/Vertex/audits/: threat_model.md
reda-37/Vertex/cli/: tsconfig.json
reda-37/Vertex/cli/src/: bin.ts
reda-37/Vertex/docs/: faq.md  index.md  sdk.md
reda-37/Vertex/docs/operations/: monitoring.md
reda-37/Vertex/docs/programs/: amm.md  launchpad.md  staking.md
reda-37/Vertex/programs/amm_cp/: Cargo.toml
reda-37/Vertex/programs/amm_cp/src/: lib.rs
reda-37/Vertex/programs/common/: Cargo.toml
reda-37/Vertex/programs/common/src/: curve.rs  decimals.rs  errors.rs  events.rs  fees.rs  merkle.rs  time.rs
reda-37/Vertex/programs/fee_router/: Cargo.toml  README.md
reda-37/Vertex/programs/fee_router/src/: lib.rs  stream_adapter.rs
reda-37/Vertex/programs/launchpad/: Cargo.toml
reda-37/Vertex/scripts/: acceptance_gate.sh  deploy_anchor.sh  devnet.sh  localnet.sh
reda-37/Vertex/sdk/rust/src/: staking.rs  vesting.rs
reda-37/Vertex/sdk/ts/: .eslintrc.cjs  package-lock.json  package.json
reda-37/Vertex/sdk/ts/src/: feeRouter.ts
reda-37/Vertex/tests/: fee_router_integration.rs
reda-37/Vertex/tests/benches/benches/: curve.rs
reda-37/Vertex/tests/fuzz/: Cargo.toml
reda-37/Vertex/tests/fuzz/tests/: curve_fuzz.rs
reda-37/Vertex/tests/ts/: package.json  tsconfig.json
reda-37/Vertex/tests/ts/scripts/: run-tests.sh
reda-37/Vertex/tests/ts/src/: fee_router.test.ts
scripts/: acceptance_gate.sh  airdrop.sh  create-pool.ts  create-test-pool.ts  init-policy-anchor.js  init-policy-from-fixture.mjs  init-policy-simple.js  init-policy-simple.ts  init-policy-simple2.js  init-policy.js  init-policy.sh  init-policy.ts  raw-init-policy.js  setup-local-fixture.js
sdk/rust/: Cargo.toml
sdk/rust/src/: amm.rs  launchpad.rs  lib.rs
sdk/ts/: package-lock.json  package.json  tsconfig.json
sdk/ts/src/: feeRouter.ts  index.ts
sdk/ts/src/__tests__/: launchpad.test.ts
tests/: fee_router_crank.rs  fee_router_integration.rs  init-policy-test.ts
tests/benches/: Cargo.toml
tests/e2e/: README.md
tests/e2e/fixtures/: presale.example.json
