[package]
name = "keystone-vesting"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Keystone vesting Anchor program"

[lib]
name = "keystone_vesting"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
keystone-common = { path = "../common" }
solana-security-txt.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
