[package]
name = "keystone-sdk"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Rust client SDK for Keystone Vertex programs"

[lib]
name = "keystone_sdk"
crate-type = ["lib"]

[dependencies]
anchor-client = "0.30.1"
anchor-lang.workspace = true
solana-sdk = "1.18.15"
solana-program.workspace = true
keystone-common = { path = "../../programs/common" }
keystone-launchpad = { path = "../../programs/launchpad", features = ["no-entrypoint"] }
keystone-amm-cp = { path = "../../programs/amm_cp", features = ["no-entrypoint"] }
keystone-staking = { path = "../../programs/staking", features = ["no-entrypoint"] }
keystone-vesting = { path = "../../programs/vesting", features = ["no-entrypoint"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
