[package]
name = "keystone-fee-router"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Fee router integrating Meteora cp-amm (DAMM v2) and Streamflow for quote-only honorary positions with daily distribution crank"

[lib]
name = "keystone_fee_router"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
streamflow = []
multi_page_n = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
bankrun-test = [
    "clone-solana-program-test",
    "clone-solana-sdk",
    "spl-associated-token-account",
    "spl-token",
    "tokio"
]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
clone-solana-program-test = { workspace = true, optional = true }
clone-solana-sdk = { workspace = true, optional = true }
spl-associated-token-account = { version = "6.0.0", optional = true }
spl-token = { version = "7.0.0", optional = true }
tokio = { workspace = true, optional = true }
